src/App.css
@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&display=swap");

:root {
  --background: #e4c6cd;
  --text-color: #4f0d1d;
  --secundairy-color: #937704;
  --highlight-color: #f42d52;
}

body {
  background-color: var(--background);
  color: var(--text-color);
  margin: 50px;
  font-family: "Playfair Display", serif;
}

h1 {
  text-align: center;
  text-transform: uppercase;
}

h2 {
  margin: 0px;
  font-weight: normal;
  font-size: 22px;
}

h2:hover {
  color: var(--secundairy-color);
}

li {
  list-style: none;
}

a {
  text-decoration: none;
  color: var(--text-color);
  font-size: 22px;
}

a:hover {
  color: var(--secundairy-color);
}

img {
  width: 100px;
  height: 100px;
  border-radius: 3px;
}

p {
  margin: 0px;
  margin-left: 110px;
  position: relative;
  top: -82px;
}

.mouseMove .mouseMoveText {
  display: none;
  font-style: italic;
  margin-top: 15px;
}

.mouseMove:hover .mouseMoveText {
  display: block;
}

@media (max-width: 900px) {
  .mouseMove .mouseMoveText {
    margin-bottom: -25px;
  }
}

